# photo-import

./: .gitignore  README.md  photo-import  pyproject.toml  requirements.txt  run.sh
.serena/: project.yml
photo_import/: __init__.py  cli.py  copier.py  database.py  exif_reader.py  expander.py  models.py  scanner.py  video_copier.py  video_database.py  video_models.py  video_reader.py  video_scanner.py  web_server.py
photo_import.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
